Archive2/07/8d77148aa2f103/output
main.cpp:12:17: error: unexpected type name 'mp_type': expected expression
    test_num *= mp_type.two();
                ^
1 error generated.
